--- a/domainScheduler/src/js/app.css
+++ b/domainScheduler/src/js/app.css
@@ -11,7 +11,8 @@
     display: none;
 }
 .dataLoader{
-    width: 100%;
     color: #0ea800;
-    text-align: center
+    text-align: center;
+    font-weight: 600px;
+    cursor: pointer;
 }
